--- a/app/src/main/res/layout/task_view.xml
+++ b/app/src/main/res/layout/task_view.xml
@@ -21,12 +21,25 @@
 
             <ImageView
                 android:id="@+id/taskIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="88dp"
+                android:layout_height="109dp"
                 app:layout_constraintEnd_toStartOf="@+id/textViewTaskDescription"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_launcher_background"
+                app:srcCompat="@drawable/ic_baseline_book_24"
+                tools:src="@tools:sample/avatars" />
+
+            <ImageView
+                android:id="@+id/deleteIcon"
+                android:layout_width="30dp"
+                android:layout_height="28dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="11dp"
+                android:layout_marginRight="11dp"
+                android:tint="#322E2E"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewTaskDateTime"
+                app:srcCompat="@drawable/delete_task_icon"
                 tools:src="@tools:sample/avatars" />
 
             <TextView
